--- a/.github/workflows/warn-editing-jsonld.yml
+++ b/.github/workflows/warn-editing-jsonld.yml
@@ -13,10 +13,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Fetch Main Branch
+        run: |
+          git fetch origin main:main
+
       - name: Get Changed Files
         id: changed-files
         run: |
-          git fetch origin main
           git diff --name-only origin/main...HEAD > changed_files.txt
 
       - name: Check for changes in directories or any .JSONLD files
