--- a/scripts/.env.example
+++ b/scripts/.env.example
@@ -1,4 +1,4 @@
-NMKR_USER_ID=your_user_id
-NMKR_API_KEY=your_api_key
-BLOCKFROST_API_KEY=your_blockfrost_api_key
-PINATA_API_KEY=your_pinata_api_key
+export NMKR_USER_ID="your_user_id"
+export NMKR_API_KEY="your_api_key"
+export BLOCKFROST_API_KEY="your_blockfrost_api_key"
+export PINATA_API_KEY="your_pinata_api_key"
